Make sure when bootstrap modal is open, extra padding-right is not added to body and navbar.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -2,6 +2,16 @@ body {
     overflow: hidden;
 }
 
+/* Make sure when bootstrap modal is open, extra padding-right is not
+added to body and navbar */
+body.modal-open {
+    padding-right: 0 !important;
+}
+
+body.modal-open .navbar {
+    padding-right: 16px !important;
+}
+
 .app-body {
     margin-top: 3.8em !important;
     overflow: hidden;
